@@ -1,3 +1,10 @@
+2003-06-18  Svein E. Seldal  <Svein.Seldal@solidas.com>
+
+	* configure.in: Add c4x as an architecture variant to tic4x.
+	* configure: Regenerate.
+	* Makefile.in: Regenerate.
+	* doc/Makefile.in: Regenerate.
+
 2003-06-18  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/tc-ppc.c (ppc_elf_suffix): Don't remove symbols other than
